--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html>
 <head>
 	<title>Business Card Designer</title>
+	
 	<link rel="stylesheet" type="text/css" href="bootrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bootrap/css/bootstrap.theme.min.css">
 	<script type="text/javascript" src="bootrap/js/boostrap.min.js"></script>
+	<script type="text/javascript" src="angular.min.js"></script>
+
+	<style>
+      body {
+        margin: 0px;
+        padding: 0px;
+      }
+    </style>
+	
 </head>
 <body>
+	<canvas id="canvas" width="600px" height="550px"></canvas>
 
+	<script type="text/javascript" src="canvas.js"></script>
 </body>
 </html>
